cluster/apps/remote/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: remote
  labels:
    goldilocks.fairwinds.com/enabled: "true"
    kustomize.toolkit.fluxcd.io/prune: disabled
